fix: alignm

--- a/src/app/pages/nova-tarefa/nova-tarefa.page.scss
+++ b/src/app/pages/nova-tarefa/nova-tarefa.page.scss
@@ -1,4 +1,5 @@
 .btns-nova-tarefa{
     display: flex;
     justify-content: space-around;
+    align-items: center;
 }
